# Rustorch

./: .gitignore  Cargo.toml  README.md
crates/Matrix/: Cargo.toml  README.md
crates/Matrix/examples/: example.rs
crates/Matrix/src/: error.rs  lib.rs  matrix.rs
crates/NeuralNetworks/: Cargo.toml
crates/NeuralNetworks/examples/: neuralNetworks.rs
crates/NeuralNetworks/src/: activations.rs  error.rs  lib.rs  nn.rs  training.rs
crates/neural-network/: Cargo.toml
crates/neural-network/examples/: neural-network.rs
crates/neural-network/src/: activation.rs  cost.rs  display.rs  lib.rs
crates/tensor/: Cargo.toml  README.md
crates/tensor/examples/: simd.rs  tensor_benchmarking.rs
crates/tensor/src/: error.rs  lib.rs  ops.rs  simd.rs  tensor.rs  tns.rs
