[package]
name = "rustorch"
version = "0.1.0"
edition = "2021"

[dependencies]
Database = { path = "crates/database" }
neural_network = { path = "crates/neural-network" }
tensor = {path= "crates/tensor"}

[workspace]
members = [
    "crates/database",
    "crates/neural-network",
    "crates/tensor"
]
